--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-detail/sw-settings-number-range-detail.html.twig
@@ -6,12 +6,13 @@
                 <h2>{{ placeholder(numberRange, 'name', $tc('sw-settings-number-range.detail.textHeadline')) }}</h2>
             </template>
         {% endblock %}
-        {% block sw_settings_customer_group_list_language_switch %}
-        <template slot="language-switch">
-            <sw-language-switch @on-change="onChangeLanguage"
-                                :saveChangesFunction="saveOnLanguageChange"
-                                :abortChangeFunction="abortOnLanguageChange"></sw-language-switch>
-        </template>
+        {% block sw_settings_number_range_detail_language_switch %}
+            <template slot="language-switch">
+                <sw-language-switch @on-change="onChangeLanguage"
+                    :saveChangesFunction="saveOnLanguageChange"
+                    :abortChangeFunction="abortOnLanguageChange">
+                </sw-language-switch>
+            </template>
         {% endblock %}
         {% block sw_settings_number_range_detail_actions %}
             <template slot="smart-bar-actions">
@@ -39,6 +40,12 @@
 
         {% block sw_settings_number_range_detail_content %}
             <sw-card-view slot="content">
+
+                {% block sw_settings_number_range_detail_language_info %}
+                    <sw-language-info :entityDescription="identifier">
+                    </sw-language-info>
+                {% endblock %}
+
                 {% block sw_settings_number_range_detail_content_card %}
                     <sw-card :title="$tc('sw-settings-number-range.detail.configCard')">
                         <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
@@ -46,7 +53,7 @@
                             {% block sw_settings_number_range_detail_content_field_name %}
                                 <sw-field type="text"
                                           :label="$tc('sw-settings-number-range.detail.labelName')"
-                                          :placeholder="placeholder(numberRange, 'name', $tc('sw-settings-number-range.detail.placeholderName'))"
+                                          :placeholder="placeholder(numberRange,'name', $tc('sw-settings-number-range.detail.placeholderName'))"
                                           validation="required"
                                           required
                                           v-model="numberRange.name">
@@ -56,7 +63,7 @@
                             {% block sw_settings_number_range_detail_content_field_description %}
                                 <sw-field type="text"
                                           :label="$tc('sw-settings-number-range.detail.labelDescription')"
-                                          :placeholder="placeholder(numberRange, 'description', $tc('sw-settings-number-range.detail.placeholderDescription'))"
+                                          :placeholder="placeholder(numberRange,'description', $tc('sw-settings-number-range.detail.placeholderDescription'))"
                                           v-model="numberRange.description">
                                 </sw-field>
                             {% endblock %}
