NTR - Fix category tree checkbox styling

--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.scss
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.scss
@@ -19,6 +19,10 @@ $sw-category-tree-border-color: $color-steam-cloud;
         }
     }
 
+    .sw-field--checkbox {
+        margin-bottom: 0;
+    }
+
     .tree-link {
         cursor: pointer;
         color: inherit;
