--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-list/sw-settings-number-range-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-list/sw-settings-number-range-list.html.twig
@@ -34,8 +34,7 @@
 
             {% block sw_settings_number_range_list_language_switch %}
                 <template slot="language-switch">
-                    <sw-language-switch @on-change="onChangeLanguage">
-                    </sw-language-switch>
+                    <sw-language-switch @on-change="onChangeLanguage"></sw-language-switch>
                 </template>
             {% endblock %}
 
