NEXT-3233 - Add target blank to dashboard

--- a/Resources/administration/src/module/sw-dashboard/component/sw-dashboard-external-link/sw-dashboard-external-link.html.twig
+++ b/Resources/administration/src/module/sw-dashboard/component/sw-dashboard-external-link/sw-dashboard-external-link.html.twig
@@ -1,4 +1,4 @@
-<a class="sw-dashboard-external-link" :href="link">
+<a class="sw-dashboard-external-link" :href="link" target="_blank">
     {{ title }}
     <sw-icon name="default-arrow-simple-right" small color="#d1d9e0"></sw-icon>
 </a>
