--- a/Resources/administration/src/module/sw-dashboard/page/sw-dashboard-index/sw-dashboard-index.html.twig
+++ b/Resources/administration/src/module/sw-dashboard/page/sw-dashboard-index/sw-dashboard-index.html.twig
@@ -27,10 +27,10 @@
                                     </div>
 
                                     <div>
-                                        <sw-button class="sw-dashboard__roadmapButton" variant="primary" :link=roadmapLink>
+                                        <sw-button class="sw-dashboard__roadmapButton" variant="primary" :link=roadmapLink target="_blank">
                                             {{ $tc("sw-dashboard.welcome.roadmapButton") }}
                                         </sw-button>
-                                        <sw-button class="sw-dashboard__issueTrackerButton" link="https://issues.shopware.com">
+                                        <sw-button class="sw-dashboard__issueTrackerButton" link="https://issues.shopware.com" target="_blank">
                                             {{ $tc("sw-dashboard.welcome.issueTrackerButton") }}
                                         </sw-button>
                                     </div>
@@ -41,7 +41,7 @@
                         </sw-card>
                         <sw-card class="sw-dashboard__paypal">
                             <img class="sw-dashboard__paypal-icon" :src="'/administration/static/img/paypal-official-logo.png' | asset">
-                            <sw-button variant="primary" link="https://github.com/shopwarelabs/SwagPayPal">
+                            <sw-button variant="primary" link="https://github.com/shopwarelabs/SwagPayPal" target="_blank">
                                 {{ $tc("sw-dashboard.paypal.buttonText") }}
                             </sw-button>
                         </sw-card>
