NEXT-3235 Preselect first tax rate on create and remove disable status on save button

--- a/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
@@ -9,7 +9,7 @@
                           validation="required"
                           required
                           v-model="product.taxId">
-                        <option v-for="tax in taxRates" :value="tax.id">{{ tax.name }}</option>
+                        <option v-for="tax in taxRates" :key="tax.id" :value="tax.id" :selected="product.taxId === tax.id">{{ tax.name }}</option>
                 </sw-field>
             {% endblock %}
 
