NEXT-3229 - Add title as required field in administration

--- a/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
@@ -12,7 +12,7 @@
 
         {% block sw_select_label %}
             <label v-if="label" :for="selectId" class="sw-select__label">
-                {{ label }}
+                {{ label }}{{ required ? '*' : '' }}
             </label>
         {% endblock %}
 
