--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
@@ -16,10 +16,14 @@
 
     .sw-cms-detail__page-info {
         display: grid;
-        grid-template-columns: 45px 260px min-content;
+        grid-template-columns: 45px min-content min-content;
         grid-gap: 20px;
         align-content: center;
         align-items: center;
+    }
+
+    .sw-cms-detail__page-name {
+        max-width: 260px;
     }
 
     .sw-cms-detail__page-type {
