--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
@@ -35,7 +35,7 @@
                         {% block sw_plugin_store_login_modal_content_login_form_input %}
                             <form role="form">
                                 {% block sw_plugin_store_login_modal_content_login_form_input_shopwareId %}
-                                    <sw-text-field v-model="shopwareId" label="-" v-on:keyup.enter="onLoginClick()">
+                                    <sw-text-field v-model="shopwareId" :label="$tc('sw-plugin.store-login.labelShopwareId')" v-on:keyup.enter="onLoginClick()">
                                         {% block sw_plugin_store_login_modal_content_login_form_input_shopwareId_label %}
                                             <template slot="label">
                                                 <div class="shopware-id-label">
